--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@ var pageCounter = 1;
 var animalContainer = document.getElementById("animal-info");
 function myFunction() {
 	var myRequest = new XMLHttpRequest();
-	myRequest.open('GET', 'https://jensen-jared.github.io/info-' + pageCounter + '.json');
+	myRequest.open('GET', '/info-' + pageCounter + '.json');
 	myRequest.onload = function() {
 		if (myRequest.status >= 200 && myRequest.status <400){
 		var myData = JSON.parse(myRequest.responseText);
