--- a/test.html
+++ b/test.html
@@ -15,18 +15,18 @@
 <script>
 var pageCounter = 1;
 var animalContainer = document.getElementById("animal-info");
-function myFunction() {
-	var myRequest = new XMLHttpRequest();
-	myRequest.open('GET', '/info-' + pageCounter + '.json');
-	myRequest.onload = myFunction() {
-		if (myRequest.status >= 200 && myRequest.status <400){
+function onLoad() {
+	if (myRequest.status >= 200 && myRequest.status <400){
 		var myData = JSON.parse(myRequest.responseText);
 		renderHTML(myData);
 		} else {
 			console.log("We connected to the server, but it returned an error.");
 		}
-};
-	
+}
+function myFunction() {
+	var myRequest = new XMLHttpRequest();
+	myRequest.open('GET', '/info-' + pageCounter + '.json');
+	myRequest.onload = onLoad();
 	myRequest.send();
 	pageCounter++;
 	if (pageCounter > 3) {
