--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>CIT 261 - XMLHTTPRequest, AJAX</title>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!--<link href='//fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
 	<link href='//fonts.googleapis.com/css?family=BioRhyme' rel='stylesheet'>
 <style>
