--- a/XMLHTTPRequest.html
+++ b/XMLHTTPRequest.html
@@ -12,32 +12,7 @@
 	body {font-family: 'BioRhyme';}
 </style>
 
-	<script type="text/javascript">
-		var url = "https://api.nasa.gov/planetary/apod?api_key=SSIOuWA9xZI2gqj8b0lhuSHqgTdhri5bj5kFZeFs";
-		$.ajax({
-		url: url,
-		success: function(result){
-		if("copyright" in result) {
-			$("#copyright").text("Image Credits: " + result.copyright);
-		}
-		else {
-			$("#copyright").text("Image Credits: " + "Public Domain");
-  
-		if(result.media_type == "video") {
-			$("#apod_img_id").css("display", "none"); 
-			$("#apod_vid_id").attr("src", result.url);
-		}
-		else {
-			$("#apod_vid_id").css("display", "none"); 
-			$("#apod_img_id").attr("src", result.url);
-		}
-		$("#reqObject").text(url);
-		$("#returnObject").text(JSON.stringify(result, null, 4));  
-		$("#apod_explaination").text(result.explanation);
-		$("#apod_title").text(result.title);
-		}
-		};
-		
+	<script>
 		function getObject() {
 		
 			var xmlhttp = new XMLHttpRequest();
