--- a/XMLHTTPRequest.html
+++ b/XMLHTTPRequest.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>CIT 261 - XMLHTTPRequest, AJAX</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!--	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
 	<link href="//fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=BioRhyme" rel="stylesheet">
 <style>
@@ -94,7 +94,7 @@
 		<img id="apod_img_id" width="250px"/>
 		<p id="copyright"></p>
 		<h3 id="apod_title"></h3>
-		<p id="apod_explaination"></p>
+		<p id="apod_explanation"></p>
 	<footer>
 		<p>Copyright 2017 - J.D. Jensen</p>
 		</footer>
