--- a/XMLHTTPRequest.html
+++ b/XMLHTTPRequest.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="utf-8">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>CIT 261 - XMLHTTPRequest, AJAX</title>
-<!--	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
 	<link href="//fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=BioRhyme" rel="stylesheet">
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
 <style>
 	h1 {font-family: 'Quicksand';}
 	h2 {font-family: 'Quicksand';}
@@ -89,12 +90,19 @@
 		<p id="demo">Press the button for a secret message using a seperate .txt file</p>
 		<button type="button" onclick="newText()">Change Content</button>
 		
-		<h3>NASA Api:</h3>
+		<h3>Google Maps Api:</h3>
   
-		<img id="apod_img_id" width="250px"/>
-		<p id="copyright"></p>
-		<h3 id="apod_title"></h3>
-		<p id="apod_explanation"></p>
+		<div id="googleMap" style="width:100%;height:400px;"></div>
+
+<script>
+function myMap() {
+var mapProp= {
+    center:new google.maps.LatLng(43.818380, -111.784241),
+    zoom:5,
+};
+var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+}
+</script>
 	<footer>
 		<p>Copyright 2017 - J.D. Jensen</p>
 		</footer>
