--- a/XMLHTTPRequest.html
+++ b/XMLHTTPRequest.html
@@ -6,7 +6,7 @@
 	<title>CIT 261 - XMLHTTPRequest, AJAX</title>
 	<link href="//fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=BioRhyme" rel="stylesheet">
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVVx0qBiAeKeQ_5dYlJEDptsr2CHOWut4&callback=BYUIMap"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVVx0qBiAeKeQ_5dYlJEDptsr2CHOWut4&callback=myMap"></script>
 <style>
 	h1 {font-family: 'Quicksand';}
 	h2 {font-family: 'Quicksand';}
@@ -92,15 +92,15 @@
 		
 		<h3>Google Maps Api:</h3>
   
-		<div id="map" style="width:100%;height:400px;"></div>
+		<div id="googleMap" style="width:100%;height:400px;"></div>
 
 <script>
-function BYUIMap() {
-var mapProperties= {
+function myMap() {
+var mapProp= {
     center:new google.maps.LatLng(43.818380, -111.784241),
     zoom:5,
 };
-var map=new google.maps.Map(document.getElementById("map"),mapProperties);
+var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
 }
 </script>
 	<footer>
