--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
     </tr>
     <tr>
       <td><a href="JavaScript Events.html" title="Standard JavaScript Events Including those for Mobile Devices ( Ex. onTouchBegin, onLoad, etc.) and Animation and Transition Events" target="_blank">Standard JavaScript Events Including those for Mobile Devices ( Ex. onTouchBegin, onLoad, etc.) and Animation and Transition Events</a></td>
-      <td> Submitted for Grading - 6/12/17</td>
+      <td>Graded - Passed 6/12/17</td>
     </tr>
     <tr>
       <td><a href="Loops and arrays.html" title="Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays" target="_blank">Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays</a></td>
@@ -53,7 +53,7 @@
     </tr>
     <tr>
       <td><a href="XMLHTTPRequest.html" title="Using XMLHTTPRequest to Consume a JSON Web Service" target="_blank">Using XMLHTTPRequest to Consume a JSON Web Service</a></td>
-      <td>In progress</td>
+      <td> Submitted for Grading - 6/19/17</td>
     </tr>
   </tbody>
 </table>
