--- a/XMLHTTPRequest.html
+++ b/XMLHTTPRequest.html
@@ -6,7 +6,8 @@
 	<title>CIT 261 - XMLHTTPRequest, AJAX</title>
 	<link href="//fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=BioRhyme" rel="stylesheet">
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVVx0qBiAeKeQ_5dYlJEDptsr2CHOWut4&callback=myMap"></script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRP034TwQojgCT39qkwG6nRdWNIWH9g3c&callback=initMap"
+  type="text/javascript"></script>
 <style>
 	h1 {font-family: 'Quicksand';}
 	h2 {font-family: 'Quicksand';}
