--- a/XMLHTTPRequest.html
+++ b/XMLHTTPRequest.html
@@ -96,7 +96,7 @@
 		<div id="googleMap" style="width:100%;height:400px;"></div>
 
 <script>
-function myMap() {
+function initMap() {
   var mapCanvas = document.getElementById("map");
   var myCenter = new google.maps.LatLng(43.818380,-111.784241); 
   var mapOptions = {center: myCenter, zoom: 5};
