--- a/XMLHTTPRequest.html
+++ b/XMLHTTPRequest.html
@@ -6,8 +6,6 @@
 	<title>CIT 261 - XMLHTTPRequest, AJAX</title>
 	<link href="//fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=BioRhyme" rel="stylesheet">
-	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRP034TwQojgCT39qkwG6nRdWNIWH9g3c&callback=initMap"
-  type="text/javascript"></script>
 <style>
 	h1 {font-family: 'Quicksand';}
 	h2 {font-family: 'Quicksand';}
@@ -95,7 +93,8 @@
   
 		<div id="googleMap" style="width:100%;height:400px;"></div>
 
-<script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRP034TwQojgCT39qkwG6nRdWNIWH9g3c&callback=initMap"
+  type="text/javascript">
 function initMap() {
   var mapCanvas = document.getElementById("map");
   var myCenter = new google.maps.LatLng(43.818380,-111.784241); 
