--- a/XMLHTTPRequest.html
+++ b/XMLHTTPRequest.html
@@ -93,8 +93,9 @@
   
 		<div id="googleMap" style="width:100%;height:400px;"></div>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRP034TwQojgCT39qkwG6nRdWNIWH9g3c&callback=initMap"
-  type="text/javascript">
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRP034TwQojgCT39qkwG6nRdWNIWH9g3c&callback=initMap" async defer
+		type="text/javascript"></script>
+<script>
 function initMap() {
   var mapCanvas = document.getElementById("map");
   var myCenter = new google.maps.LatLng(43.818380,-111.784241); 
