--- a/XMLHTTPRequest.html
+++ b/XMLHTTPRequest.html
@@ -93,8 +93,6 @@
   
 		<div id="googleMap" style="width:100%;height:400px;"></div>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRP034TwQojgCT39qkwG6nRdWNIWH9g3c&callback=initMap" async defer
-		type="text/javascript"></script>
 <script>
 function initMap() {
   var mapCanvas = document.getElementById("map");
@@ -109,6 +107,7 @@ function initMap() {
   marker.setMap(map);
 }
 </script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRP034TwQojgCT39qkwG6nRdWNIWH9g3c&callback=initMap" async defer></script>
 	<footer>
 	  <p>Copyright 2017 - J.D. Jensen</p>
 	  </footer>
