--- a/XMLHTTPRequest.html
+++ b/XMLHTTPRequest.html
@@ -93,7 +93,22 @@
   
 		<div id="googleMap" style="width:100%;height:400px;"></div>
 
-<script>
+<script type="text/javascript">
+
+function initMap() {
+    var latlng = new google.maps.LatLng(43.818380,-111.784241);
+    var myOptions = {
+        zoom: 8,
+        center: latlng,
+        mapTypeId: google.maps.MapTypeId.ROADMAP
+    };
+    var map = new google.maps.Map(document.getElementById("map_canvas"),
+            myOptions);
+}
+google.maps.event.addDomListener(window, "load", initialize);
+
+</script>
+<!--<script>
 function initMap() {
   var mapCanvas = document.getElementById("map");
   var myCenter = new google.maps.LatLng(43.818380,-111.784241); 
@@ -106,7 +121,7 @@ function initMap() {
   });
   marker.setMap(map);
 }
-</script>
+</script>-->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRP034TwQojgCT39qkwG6nRdWNIWH9g3c&callback=initMap" async defer></script>
 	<footer>
 	  <p>Copyright 2017 - J.D. Jensen</p>
