--- a/XMLHTTPRequest.html
+++ b/XMLHTTPRequest.html
@@ -10,6 +10,14 @@
 	h1 {font-family: 'Quicksand';}
 	h2 {font-family: 'Quicksand';}
 	body {font-family: 'BioRhyme';}
+	#map {
+        height: 100%;
+      }
+    html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
 </style>
 
 	<script>
@@ -91,7 +99,17 @@
 		
 		<h3>Google Maps Api:</h3>
   
-		<div id="googleMap" style="width:100%;height:400px;"></div>
+		<div id="map"></div>
+    <script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: 43.818380, lng: -111.784241},
+          zoom: 8
+        });
+      }
+    </script>
+		<!--<div id="googleMap" style="width:100%;height:400px;"></div>
 
 <script type="text/javascript">
 
@@ -107,7 +125,7 @@ function initMap() {
 }
 google.maps.event.addDomListener(window, "load", initialize);
 
-</script>
+</script>-->
 <!--<script>
 function initMap() {
   var mapCanvas = document.getElementById("map");
