--- a/XMLHTTPRequest.html
+++ b/XMLHTTPRequest.html
@@ -99,8 +99,8 @@
 		
 		<h3>Google Maps Api:</h3>
   
-		<div id="map"></div>
-    <script>
+		<div id="map" style="width:100%;height:500px"></div>
+   <!-- <script>
       var map;
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
@@ -108,7 +108,7 @@
           zoom: 8
         });
       }
-    </script>
+    </script>-->
 		<!--<div id="googleMap" style="width:100%;height:400px;"></div>
 
 <script type="text/javascript">
@@ -126,7 +126,7 @@ function initMap() {
 google.maps.event.addDomListener(window, "load", initialize);
 
 </script>-->
-<!--<script>
+<script>
 function initMap() {
   var mapCanvas = document.getElementById("map");
   var myCenter = new google.maps.LatLng(43.818380,-111.784241); 
@@ -139,7 +139,7 @@ function initMap() {
   });
   marker.setMap(map);
 }
-</script>-->
+</script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRP034TwQojgCT39qkwG6nRdWNIWH9g3c&callback=initMap" async defer></script>
 	<footer>
 	  <p>Copyright 2017 - J.D. Jensen</p>
