--- a/XMLHTTPRequest.html
+++ b/XMLHTTPRequest.html
@@ -99,42 +99,16 @@
 		
 		<h3>Google Maps Api:</h3>
   
-		<div id="map" style="width:100%;height:500px"></div>
-   <!-- <script>
-      var map;
-      function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: 43.818380, lng: -111.784241},
-          zoom: 8
-        });
-      }
-    </script>-->
-		<!--<div id="googleMap" style="width:100%;height:400px;"></div>
-
-<script type="text/javascript">
-
-function initMap() {
-    var latlng = new google.maps.LatLng(43.818380,-111.784241);
-    var myOptions = {
-        zoom: 8,
-        center: latlng,
-        mapTypeId: google.maps.MapTypeId.ROADMAP
-    };
-    var map = new google.maps.Map(document.getElementById("map_canvas"),
-            myOptions);
-}
-google.maps.event.addDomListener(window, "load", initialize);
-
-</script>-->
+		<div id="map" style="width:50%;height:250px"></div>
 <script>
 function initMap() {
   var mapCanvas = document.getElementById("map");
   var myCenter = new google.maps.LatLng(43.818380,-111.784241); 
-  var mapOptions = {center: myCenter, zoom: 5};
+  var mapOptions = {center: myCenter, zoom: 15};
   var map = new google.maps.Map(mapCanvas,mapOptions);
   var marker = new google.maps.Marker({
     position: myCenter,
-	icon: student.png,
+	icon: /student.png,
     animation: google.maps.Animation.BOUNCE
   });
   marker.setMap(map);
