--- a/XMLHTTPRequest.html
+++ b/XMLHTTPRequest.html
@@ -108,7 +108,7 @@ function initMap() {
   var map = new google.maps.Map(mapCanvas,mapOptions);
   var marker = new google.maps.Marker({
     position: myCenter,
-	icon: "/student.png"
+	icon: "/student.png",
     animation: google.maps.Animation.BOUNCE
   });
   marker.setMap(map);
