--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
                 <h4>Testing Tools</h4>
                 <div class="attribute-group">
                     <h4>Message Testing</h4>
-                    <button type="button" onclick='createMessage(guid(), 1)'>Info Test Messages</button>
-                    <button type="button" onclick='createMessage(guid(), 2)'>Warning Test Messages</button>
-                    <button type="button" onclick='createMessage(guid() + guid() + guid() + guid(), 3)'>Error Test Messages</button>
+                    <button type="button" onclick="createMessage(guid(), 1)">Info Test Messages</button>
+                    <button type="button" onclick="createMessage(guid(), 2)">Warning Test Messages</button>
+                    <button type="button" onclick="createMessage(guid() + guid() + guid() + guid(), 3)">Error Test Messages</button>
                 </div>
                 <div class="attribute-group">
                     <h4>Scenario Testing</h4>
@@ -204,14 +204,14 @@
         ================================================== -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
-        <script src="js/bootstrap.min.js" type="text/javascript"></script>
-        <script src="js/file-io.js" type="text/javascript"></script>
-        <script src="js/calculate.js" type="text/javascript"></script>
-        <script src="js/validateinputs.js" type="text/javascript"></script>
-        <script src="js/layout.js" type="text/javascript"></script>
-        <script src="js/amortize.js" type="text/javascript"></script>
-        <script src="js/utils.js" type="text/javascript"></script>
-        <script src="js/worker-thread.js" type="text/javascript"></script>
+        <script src="bootstrap.min.js" type="text/javascript"></script>
+        <script src="file-io.js" type="text/javascript"></script>
+        <script src="calculate.js" type="text/javascript"></script>
+        <script src="validateinputs.js" type="text/javascript"></script>
+        <script src="layout.js" type="text/javascript"></script>
+        <script src="amortize.js" type="text/javascript"></script>
+        <script src="utils.js" type="text/javascript"></script>
+        <script src="worker-thread.js" type="text/javascript"></script>
         
     </body>
 </html>
