--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
         <!-- CSS
         ================================================== -->
-        <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet" media="screen" />
-        <link href="css/main.css" type="text/css" rel="stylesheet" media="screen" />
-        <link href="css/animations.css" type="text/css" rel="stylesheet" media="screen" />
-        <link href="css/print-calculator.css" type="text/css" rel="stylesheet" media="print" />
-        <link href="css/layout.css" type="text/css" rel="stylesheet" media="screen" />
+        <link href="bootstrap.min.css" type="text/css" rel="stylesheet" media="screen" />
+        <link href="main.css" type="text/css" rel="stylesheet" media="screen" />
+        <link href="animations.css" type="text/css" rel="stylesheet" media="screen" />
+        <link href="print-calculator.css" type="text/css" rel="stylesheet" media="print" />
+        <link href="layout.css" type="text/css" rel="stylesheet" media="screen" />
 
         <!-- Favicons
         ================================================== -->
