--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Nerd Herd Calculator</title>
+        <title>CIT 261:02 Loan Calculator</title>
 
         <!-- Mobile Specific Metas
         ================================================== -->
