--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
             </div>
             <div class="row">
                 <div class="col-md-12 action-buttons">
-                    <button id="goButton" class="rnd-btn" title="Calculate Loan">Go</button>
-                    <button id="newButton" class="rnd-btn" title="Clear">New</button>
-                    <button id="saveButton" class="rnd-btn" title="Save Scenario">Save</button>
-                    <button id="deleteButton" class="rnd-btn" title="Delete Scenario">Delete</button>
-                    <button id="open-load-screen" data-toggle="modal" data-target="#load-screen" type="button" class="rnd-btn">Scenario List</button>
-                    <button id="amortButton" class="rnd-btn hide-me" title="Show Amortization Schedule">Amortize</button>
+                    <button id="goButton" class="button rnd-btn" title="Calculate Loan">Go</button>
+                    <button id="newButton" class="button rnd-btn" title="Clear">New</button>
+                    <button id="saveButton" class="button rnd-btn" title="Save Scenario">Save</button>
+                    <button id="deleteButton" class="button rnd-btn" title="Delete Scenario">Delete</button>
+                    <button id="open-load-screen" data-toggle="modal" data-target="#load-screen" type="button" class="button rnd-btn">Scenario List</button>
+                    <button id="amortButton" class="button rnd-btn hide-me" title="Show Amortization Schedule">Amortize</button>
                 </div>
             </div>
         </section>
